# misaxx-core

./: .gitmodules  CMakeLists.txt  README.md  conan-export.sh  conanfile.py  main.cpp
cmake/: find_coixx.cmake  find_cxxh.cmake  find_pattxx.cmake  misaxx-core-config.cmake.in  misaxx-module-template.cmake  module_info.cpp.in  module_info.h.in
include/misaxx/: misa_cache.h  misa_cached_data.h  misa_cached_data_base.h  misa_data_description.h  misa_default_cache.h  misa_description_storage.h  misa_dispatch_blueprint.h  misa_dispatcher.h  misa_dispatcher_blueprint_list.h  misa_dispatcher_blueprints.h  misa_dispatcher_builder.h  misa_functional_task.h  misa_module.h  misa_module_base.h  misa_module_declaration.h  misa_module_info.h  misa_module_interface.h  misa_multiobject_root.h  misa_mutable_module_info.h  misa_parameter.h  misa_parameter_base.h  misa_parameter_builder.h  misa_primitive.h  misa_serializeable.h  misa_task.h  misa_worker.h  module_info.h
misaxx/: algorithm_node_path.cpp  algorithm_node_path.h  misa_cache.cpp  misa_cache.h  misa_cached_data.h  misa_cached_data_base.cpp  misa_cached_data_base.h  misa_cli.cpp  misa_cli.h  misa_data_description.cpp  misa_data_description.h  misa_data_pattern.cpp  misa_data_pattern.h  misa_data_pattern_base.cpp  misa_data_pattern_base.h  misa_data_ptr.h  misa_default_cache.h  misa_default_description_accessors.h  misa_description_storage.cpp  misa_description_storage.h  misa_dispatcher.cpp  misa_dispatcher.h  misa_file.h  misa_file_stack.h  misa_filesystem.h  misa_future_dispatch.cpp  misa_future_dispatch.h  misa_future_dispatch_enum.h  misa_generic_file_stack.h  misa_image_stack.h  misa_manual_cache.h  misa_metadata.h  misa_module.cpp  misa_module.h  misa_module_base.cpp  misa_module_data.h  misa_module_declaration.cpp  misa_module_declaration.h  misa_module_declaration_base.cpp  misa_module_declaration_base.h  (+24 more)
misaxx/accessors/: misa_exported_attachments.cpp  misa_exported_attachments.h  misa_image_file.cpp  misa_image_file.h  misa_image_stack.cpp  misa_image_stack.h
misaxx/attachments/: filesystem_link.cpp  filesystem_link.h  misa_filesystem_link.cpp  misa_filesystem_link.h  misa_location.cpp  misa_location.h  misa_matrix.cpp  misa_matrix.h  misa_quantity.cpp  misa_quantity.h  misa_range.cpp  misa_range.h  misa_scalar.cpp  misa_scalar.h  misa_unit.cpp  misa_unit.h  misa_unit_numeric.cpp  misa_unit_numeric.h  misa_unit_numeric_conversions.h  misa_voxel.cpp  misa_voxel.h  object2d_pixels.cpp  object2d_pixels.h  object3d_pixels.cpp  object3d_pixels.h  object3d_volume.cpp  object3d_volume.h  object3d_voxel_bounds.cpp  object3d_voxel_bounds.h  object3d_voxel_size.cpp  object3d_voxel_size.h  object_name.cpp  object_name.h
misaxx/cached_data/: misa_cache.h  misa_cache_registry.h  misa_cached_data.h  misa_description.h  misa_image_file.h  misa_pattern.h  misa_unsafe_exportable_meta_data.h  misa_unsafe_file.h  misa_unsafe_image_file.h  misa_unsafe_image_stack.h  misa_unsafe_json_file.h
misaxx/caches/: misa_exported_attachments.cpp  misa_exported_attachments.h  misa_exported_attachments_cache.cpp  misa_exported_attachments_cache.h  misa_image_file.cpp  misa_image_file.h  misa_image_file_cache.h  misa_image_stack.cpp  misa_image_stack.h  misa_image_stack_cache.h  misa_unsafe_exportable_meta_data.cpp  misa_unsafe_exportable_meta_data.h  misa_unsafe_file.cpp  misa_unsafe_file.h  misa_unsafe_image_file.cpp  misa_unsafe_image_file.h  misa_unsafe_image_stack.cpp  misa_unsafe_image_stack.h  misa_unsafe_json_file.cpp  misa_unsafe_json_file.h
misaxx/descriptions/: misa_file_description.cpp  misa_file_description.h  misa_file_stack_description.cpp  misa_file_stack_description.h  misa_image_file_description.cpp  misa_image_file_description.h
misaxx/detail/: misa_json_schema.cpp  misa_json_schema.h
misaxx/filesystem/: directories_importer.h  empty_importer.h  json_importer.h  json_schema_serializer.h  misa_entry.h  misa_file.h  misa_filesystem.cpp  misa_filesystem.h  misa_filesystem_directories_importer.cpp  misa_filesystem_directories_importer.h  misa_filesystem_empty_importer.cpp  misa_filesystem_empty_importer.h  misa_filesystem_entry.cpp  misa_filesystem_entry.h  misa_filesystem_json_importer.cpp  misa_filesystem_json_importer.h  misa_filesystem_metadata.h  misa_folder.h  misa_stack.h  vfs_entry.h  vfs_file.h  vfs_folder.h  virtual_filesystem.h
misaxx/json/: misa_json_helper.h  misa_json_property.cpp  misa_json_property.h  misa_json_property_base.cpp  misa_json_property_base.h  misa_json_schema.h  misa_json_schema_builder.cpp  misa_json_schema_builder.h  misa_json_schema_converter.cpp  misa_json_schema_converter.h
misaxx/metadata/: misa_metadata.h  object2d_pixels.h  object3d_pixel_bounds.h  object3d_pixels.h  object3d_volume.h  object3d_voxel_bounds.h  object3d_voxel_size.h
misaxx/module_data/: misa_exportable_meta_data.h  misa_file.h  misa_file_stack.h  misa_generic_file_stack.h  misa_image_file.h  misa_image_stack.h  misa_json_file.h  misa_meta_data.h
misaxx/ome_data/: misa_metadata.h  object2d_pixels.h  object3d_pixels.h  object3d_volume.h  object3d_voxel_bounds.h  object3d_voxel_size.h  object_name.h
misaxx/parameters/: algorithm_node_path.cpp  algorithm_node_path.h  default_parameter_check.cpp  default_parameter_check.h  default_parameter_prepare.h  input_parameter.cpp  input_parameter.h  object_metadata.h  object_node_path.cpp  object_node_path.h  output_parameter.h  parameter_base.h  parameter_checks.cpp  parameter_prepare.h  voxel_size.h
misaxx/patterns/: misa_dummy_pattern.cpp  misa_dummy_pattern.h  misa_file_pattern.cpp  misa_file_pattern.h  misa_file_stack_pattern.cpp  misa_file_stack_pattern.h  misa_image_file_pattern.cpp  misa_image_file_pattern.h  misa_image_file_stack_pattern.cpp  misa_image_file_stack_pattern.h  misa_no_pattern.cpp  misa_no_pattern.h
misaxx/pdata/: misa_exportable_meta_data.h  misa_file.h  misa_file_stack.h  misa_image_file.h  misa_pdata.h
misaxx/root_modules/: misa_default_root_module.h  misa_multiobject_root.h  misa_root_module_base.h
src/: misa_module_info.cpp
(+361 files in other folders)
